# watermark_app

./: .gitignore  README.md  pyproject.toml  requirements.txt  watermark.py  watermark_cli.py  watermark_config.py  watermark_gui.py  watermark_test.py
gui/: create_ui.sh  watermark_progress.ui  watermark_progress_dialog.py  watermark_progress_ui.py  watermark_window.ui  watermark_window_ui.py
tests/: IMG_5219.HEIC
watermark_app/: make_dist.ps1  make_dist.sh  watermark.py  watermark_cli.py  watermark_config.py  watermark_gui.py  watermark_test.py
watermark_app/gui/: create_ui.sh  gui_test.py  watermark_progress_dialog.py  watermark_progress_ui.py  watermark_window.ui  watermark_window_ui.py
